<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.appodrom.konverter.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|number|numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/input"
        android:includeFontPadding="true"
        android:hint="@string/deine_eingabe"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:text="@string/usd_eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usd2euro"
                android:layout_weight="1"
                android:onClick="convert"/>

            <Button
                android:text="@string/eur_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/euro2usd"
                android:layout_weight="1"
                android:onClick="convert"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:text="@string/zoll_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inch2cm"
                android:layout_weight="1"
                android:onClick="convert"/>

            <Button
                android:text="@string/cm_zoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cm2inch"
                android:layout_weight="1"
                android:onClick="convert"/>

        </LinearLayout>

        <TextView
            android:text="Ergebnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:id="@+id/statusText"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reset" />

</RelativeLayout>
